$Date$

VEGAN RELEASE VERSIONS at http://cran.r-project.org/

Version 2.0-3 (opened November 13, 2011)

	* merge r2016: empty factor levels in betadisper() fixed in
	ordimedian(). 
	* merge r2008,9,11,12: add rarecurve.
	* merge r2007: FAQ update for arrow scaling.
	* merge r2004: metaMDS(..., noshare=0) triggers stepacross(), but
	'noshare = FALSE' never does.
	* merge r2001: explain scaling of arrows in envfit() plot() --
	this looks like being a FAQ.

Version 2.0-2 (opened October 20, 2011)

	* merge r1991 by hand: change sapply(H.s t) to use lapply in adonis
	to fix a further bug in implementing speed-ups in f.test
	* merge r1988 by hand: calling f.test without transposed matrix
	bug in adonis.
	* merge r1985: ordiarrows, ordisegments gained arg 'order.by'.
	* merge r1974,1975,1980,1982: FAQ update.
	* merge r1970: ordispider returns invisible plotting structure.
	* merge r1969: ordiplot3d.Rd tells about xyz.convert().
	* merge r1964: clarify stress scaling in iso/monoMDS.
	* merge r1961: consinstent 'noshrink' defaults in metaMDSdist()
	and metaMDS(..., engine="isoMDS")
	* merge r1959: capscale zero-rank constraints bug fix.

Version 2.0-1 (released October 20, 2011)

	* merge r1945: add plot & lines for as.preston & as.fisher.
	* merge r1944: R 2.14.0 (r52709) gives a message() when sd() is
	used for matrices -- now fixed for rda.default, capscale and
	simulate.rda/cca/capscale. 
	* merge r1939: slacker and faster nesteddisc.
	* merge r1928: permutest.cca result could not be update()d.
 	* merge r1927: reset 'tries' when 'previous.best' was a different
	model.
	* merge r1916: ordisurf.Rd references.
	* merge r1914: example speed-up.
	* r1897, 1840, 1825, 1823: copy clamtest (at r1897),
	summary.clamtest, print.summary.clamtest, plot.clamtest (all at
	r1823) and clamtest.Rd (at r1897)
	* merge r1872: raupcrick doc fixes.
	* merge r1869: meandist re-ordering bug fix.
	* merge r1846: tweak speed (a bit).
	* merge r1845: faster centroids.cca.