@@ -13,6 +13,7 @@ factorfit, fisherfit, fitspecaccum, goodness, hiersimu, humpfit,
 indpower, inertcomp, initMDS, intersetcor, isomapdist, isomap,
 linestack, mantel, meandist, metaMDSdist, metaMDSiter, metaMDSredist,
 MDSrotate, metaMDS, monoMDS, mrpp, msoplot, mso, multipart,
+nestedbetajac, nestedbetasor, 
 nestedchecker, nesteddisc, nestedn0, nestednodf, nestedtemp, oecosimu,
 ordiR2step, ordiarrows, ordicloud, ordicluster,
 ordiellipse, ordigrid, ordihull, ordilabel, ordiplot3d,
